# milieu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy-server.yml  release-brew.yml
crates/milieu/: Cargo.toml
crates/milieu/src/: api.rs  auth.rs  config.rs  crypto.rs  error.rs  keychain.rs  keys.rs  main.rs  manifest.rs  repo.rs  style.rs
crates/milieu/src/commands/: add.rs  branches.rs  changes.rs  checkout.rs  clone.rs  doctor.rs  init.rs  log.rs  login.rs  logout.rs  mod.rs  phrase.rs  pull.rs  push.rs  register.rs  remove.rs  repos.rs  sessions.rs  status.rs  user.rs
scripts/brew/: milieu.rb
server/: package-lock.json  package.json  schema.sql  wrangler.local.toml.example  wrangler.toml
server/scripts/: create-user.mjs  generate-docs.mjs
server/src/: api.ts  demo.ts  docs.ts  env.ts  favicons.ts  index.ts  site.ts
