[package]
name = "milieu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "gzip"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.keyring]
version = "2"

[dependencies.rand_core]
version = "0.6"
features = ["getrandom"]

[dependencies.argon2]
version = "0.5"

[dependencies.chacha20poly1305]
version = "0.10"
features = ["std"]

[dependencies.base64]
version = "0.22"

[dependencies.rpassword]
version = "7"

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.urlencoding]
version = "2"

[dependencies.blake3]
version = "1"

[dependencies.atty]
version = "0.2"

[dependencies.bip39]
version = "2"

[dependencies.similar]
version = "2"

[dependencies.chrono]
version = "0.4"
features = ["std", "clock"]

[dependencies.hostname]
version = "0.4"

[dependencies.x25519-dalek]
version = "2"
features = ["static_secrets"]

[dependencies.hkdf]
version = "0.12"

[dependencies.sha2]
version = "0.10"

[dev-dependencies]
